--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "core-js": "^3.6.4",
     "cropperjs": "^1.5.7",
     "dplayer": "^1.25.1",
+    "js-cookie": "^2.2.1",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6",
     "vuetify": "^2.2.11",
