--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "js-cookie": "^2.2.1",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6",
+    "vuedraggable": "^2.24.3",
     "vuetify": "^2.2.11",
     "vuex": "^3.1.3"
   },
