--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "core-js": "^3.6.4",
     "cropperjs": "^1.5.7",
     "dplayer": "^1.25.1",
+    "google-protobuf": "^3.15.1",
+    "grpc-web": "^1.2.1",
     "js-cookie": "^2.2.1",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6",
